# cosmic-dirstat

./: Cargo.toml  README.md
src/: analyze.rs  gui.rs  main.rs
src/gui/: partition_view.rs  tree.rs
