[package]
name = "cosmic-dirstat"
authors = ["Daniel Yoon <daniel@yoon.com.au>"]
description = "WIP - KDirStat-esque disk usage analyzer using the libcosmic toolkit"
repository = "https://github.com/Koranir/cosmic-dirstat"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
humansize = "2.1.3"
rfd = "0.17.2"
treemap = "0.3.2"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic"
default-features = false
features = ["winit", "wgpu", "tokio"]
